3.5.2/_sources/gallery/pyplots/text_layout.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/text_layout.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_text_layout.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_text_layout.py:


===========
Text Layout
===========

Create text with different alignment and rotation.

.. GENERATED FROM PYTHON SOURCE LINES 8-55

.. code-block:: default


    import matplotlib.pyplot as plt
    import matplotlib.patches as patches

    fig = plt.figure()

    left, width = .25, .5
    bottom, height = .25, .5
    right = left + width
    top = bottom + height

    # Draw a rectangle in figure coordinates ((0, 0) is bottom left and (1, 1) is
    # upper right).
    p = patches.Rectangle((left, bottom), width, height, fill=False)
    fig.add_artist(p)

    # Figure.text (aka. plt.figtext) behaves like Axes.text (aka. plt.text), with
    # the sole exception that the coordinates are relative to the figure ((0, 0) is
    # bottom left and (1, 1) is upper right).
    fig.text(left, bottom, 'left top',
             horizontalalignment='left', verticalalignment='top')
    fig.text(left, bottom, 'left bottom',
             horizontalalignment='left', verticalalignment='bottom')
    fig.text(right, top, 'right bottom',
             horizontalalignment='right', verticalalignment='bottom')
    fig.text(right, top, 'right top',
             horizontalalignment='right', verticalalignment='top')
    fig.text(right, bottom, 'center top',
             horizontalalignment='center', verticalalignment='top')
    fig.text(left, 0.5*(bottom+top), 'right center',
             horizontalalignment='right', verticalalignment='center',
             rotation='vertical')
    fig.text(left, 0.5*(bottom+top), 'left center',
             horizontalalignment='left', verticalalignment='center',
             rotation='vertical')
    fig.text(0.5*(left+right), 0.5*(bottom+top), 'middle',
             horizontalalignment='center', verticalalignment='center',
             fontsize=20, color='red')
    fig.text(right, 0.5*(bottom+top), 'centered',
             horizontalalignment='center', verticalalignment='center',
             rotation='vertical')
    fig.text(left, top, 'rotated\nwith newlines',
             horizontalalignment='center', verticalalignment='center',
             rotation=45)

    plt.show()




.. image-sg:: /gallery/pyplots/images/sphx_glr_text_layout_001.png
   :alt: text layout
   :srcset: /gallery/pyplots/images/sphx_glr_text_layout_001.png, /gallery/pyplots/images/sphx_glr_text_layout_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 56-63

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.figure.Figure.add_artist`
   - `matplotlib.figure.Figure.text`


.. _sphx_glr_download_gallery_pyplots_text_layout.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: text_layout.py <text_layout.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: text_layout.ipynb <text_layout.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
